ctenv/tests/ui/fail/non_literal_argument.stderr
error: expected string literal
 --> tests/ui/fail/non_literal_argument.rs:8:23
  |
8 |     let _var = ctenv!(var_name);
  |                       ^^^^^^^^
